# gan_qt_app

./: CMakeLists.txt  README.md  SpecGAN.desktop
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RknnProcessor.cpp  RknnProcessor.h  main.cpp
